# data-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.backup.txt
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  delete_qdrant.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate_sql.py
app/api/: dependencies.py  lifespan.py
app/api/routers/: query_router.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: __init__.py  app_config.py  meta_config.py
app/core/: context.py  log.py
app/models/: column_metric_mysql.py  metric_info_mysql.py  table_info_mysql.py
app/prompt/: prompt_loader.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repositories.py
app/repositories/mysql/meta/: meta_mysql_repositories.py
app/repositories/mysql/meta/mappers/: column_info_mapper.py  column_metric_mapper.py  metric_info_mapper.py  table_info_mapper.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repositories.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml
docker/: docker-compose.yaml
docker/mysql/: dw.sql
prompts/: correct_sql.prompt  generate_sql.prompt
