[project]
name = "agent"
version = "0.1.0"
description = "自然语言查数智能体，面向数据仓库元数据检索、SQL 生成与查询执行。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=48.0.0",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.136.1",
    "jieba>=0.42.1",
    "langchain>=1.2.17",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.1.10",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.49",
]
